syntax = "proto3";

package cat;

// define service
service CatService {
  rpc listCats (Empty) returns (CatList) {}
  rpc readCat (CatId) returns (Cat) {}
  rpc createCat (NewCat) returns (Cat) {}
  rpc updateCat (Cat) returns (Cat) {}
  rpc deleteCat (CatId) returns (Cat) {}
}

// define message
message Empty {}

message CatList {
  repeated Cat cats = 1;
}

message Cat {
  int32 id = 1;
  string name = 2;
  string color = 3;
}

message CatId {
  int32 id = 1;
}

message NewCat {
  string name = 2;
  string color = 3;
}
